--- a/main.html
+++ b/main.html
@@ -8,7 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<ol>
+		<li >Acciojob-The company</li>
+		<li>Vacation to Italy</li>
+		<li>Tesla K stocks</li>
+		</ol>
+		<ul>
+			<li>Manali</li>
+			<li>Lakshadweep</li>
+			<li>Paris</li>
+		</ul>
+ <script type="text/javascript" src="./script.js">
 </script>
 
 </body>
