--- a/main.html
+++ b/main.html
@@ -8,13 +8,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<ol>
+	<ol data-ns-test='holidayList'>
 		<li >Acciojob-The company</li>
-		<li>Vacation to Italy</li>
+		<li>Tajmahal</li>
 		<li>Tesla K stocks</li>
 		</ol>
-		<ul>
-			<li>Manali</li>
+		<ul data-ns-test='holidayList' >
+			<li >Manali</li>
 			<li>Lakshadweep</li>
 			<li>Paris</li>
 		</ul>
