--- a/main.html
+++ b/main.html
@@ -8,12 +8,12 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<ol data-ns-test='holidayList'>
+	<ol data-ns-test='shoppingList'>
 		<li >Acciojob-The company</li>
 		<li>Tajmahal</li>
 		<li>Tesla K stocks</li>
 		</ol>
-		<ul data-ns-test='holidayList' >
+		<ul data-ns-test='holidayList'>
 			<li >Manali</li>
 			<li>Lakshadweep</li>
 			<li>Paris</li>
