--- a/main.html
+++ b/main.html
@@ -8,15 +8,15 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<ol data-ns-test='shoppingList'>
-		<li >Acciojob-The company</li>
-		<li>Tajmahal</li>
-		<li>Tesla K stocks</li>
+	<ol >
+		<li data-ns-test='shoppingList'>Acciojob-The company</li>
+		<li data-ns-test='shoppingList'>Tajmahal</li>
+		<li data-ns-test='shoppingList'>Tesla K stocks</li>
 		</ol>
-		<ul data-ns-test='holidayList'>
-			<li >Manali</li>
-			<li>Lakshadweep</li>
-			<li>Paris</li>
+		<ul >
+			<li data-ns-test='holidayList' >Manali</li>
+			<li data-ns-test='holidayList'>Lakshadweep</li>
+			<li data-ns-test='holidayList'>Paris</li>
 		</ul>
  <script type="text/javascript" src="./script.js">
 </script>
